# libfabric-test

./: .clang-format  .gitignore  CMakeLists.txt  main.c
include/: log.h  mem.h  network.h  rdmt.h  task.h
include-old/: log.h  network.h
src/: client.c  example.c  main.c  mem.c  network.c  server.c  server_request.c  task.c
src-old/: client.c  main.c  server_request.c
